[package]
name = "ogre"
version = "0.1.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
resolver = "2"

[features]
default = ["serde_support", "async"]
async = ["futures", "async-std"]
serde_support = ["serde", "serde-big-array"]

[dependencies]
nom = "6.1.2"

[dependencies.serde]
version = "1.0.125"
features = ["derive"]
optional = true

[dependencies.serde-big-array]
version = "0.3.2"
features = ["const-generics"]
optional = true

[dependencies.futures]
version = "0.3.14"
optional = true

[dependencies.async-std]
version = "1.9.0"
optional = true