[package]
name = "ogre"
version = "0.1.6"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A rusty, dual-wielding Quake and Half-Life texture WAD parser."
repository = "https://github.com/Shfty/ogre/"
keywords = ["wad", "quake", "textures", "gamedev", "async"]
categories = ["parsing", "parser-implementations", "rendering::data-formats", "game-development", "asynchronous"]
exclude = [
    ".vscode/*",
]

[features]
default = ["serde_support", "async"]
async = ["futures", "async-std"]
serde_support = ["serde", "serde-big-array"]

[dependencies]
nom = "7.0.0"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
optional = true

[dependencies.serde-big-array]
version = "0.3.2"
features = ["const-generics"]
optional = true

[dependencies.futures]
version = "0.3.17"
optional = true

[dependencies.async-std]
version = "1.10.0"
optional = true
